--- a/final/css/style.css
+++ b/final/css/style.css
@@ -81,7 +81,7 @@ body {
   .artical-title{
     font-family: "Playfair+Display";
     font-size: 30px;
-    line-height: 36px;
+    line-height: 0px;
     color: rgb(98, 98, 98);
     margin-bottom: 0;
   }
@@ -90,10 +90,10 @@ body {
     font-family: "Ubuntu", sans-serif;
     font-weight: 420;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 0px;
     text-transform: uppercase;
     color: #b4ad9e;
-    margin-bottom: 0%
+    margin: 0%
   }
   .navigation a{
     font-weight: 420px;
