--- a/hm4_44/css/style.css
+++ b/hm4_44/css/style.css
@@ -1,289 +1,291 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  .conteiner {
-    width: 1110px;
-    margin: 0 auto;
-  }
-  
-  h1::first-letter {
-    color: #1abc9c;
-    font-family: "Roboto Black", sans-serif;
-    font-weight: bold;
-  }
-  
-  h1 {
-    float: left;
-  }
-  
-  .clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  h1 {
-    text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    color: #515151;
-    font-size: 22px;
-      }
-  
-  .navigation {
-    list-style: none;
-    float: right;
-    margin: 0;
-  }
-  
-  }
-  .clearfix{
-    text-align: center;
-  }
-  header{
-    padding-bottom: 100px;
-    padding-top: 32px;
-    text-align: center;
-    width: 1110px;
-      }
-  .navigation a {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: "Open Sans", sans-serif;
-    font-size: 12px;
-    color: black;
-    text-decoration: none;
-  }
-  
-  .navigation a:hover {
-    color: #1abc9c;
-  }
-  
-  .pictures li {
-    display: inline-block;
-    width: 255px;
-    height: 322px;
-    list-style-type: none;
-    margin-right: 0px;
-    margin-bottom: 30px;
-  }
-  
-  .pictures li:nth-child(4n) {
-    margin-right: 30px;
-  }
-  
-  .pictures li {
-    float: left;
-  }
-  
-  .name {
-    display: inline-block;
-    width: 200px;
-    height: 40px;
-    background-color: #323232;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
-    font-weight: black;
-    color: white;
-    text-decoration: none;
-    line-height: 40px;
-  }
-  
-  .price {
-    display: inline-block;
-    background-color: #8c8c8c;
-    width: 55px;
-    height: 40px;
-    text-align: center;
-    float: right;
-    text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
-    font-weight: black;
-    font-weight: bold;
-    color: white;
-    text-decoration: none;
-    line-height: 40px;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .pictures li img {
-    display: inline-block;
-    height: 282px;
-    width: 255px;
-    margin-bottom: -4px;
-  }
-  
-  .pictures li:nth-child(n +4) {
-    margin-bottom: 30px;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  .pictures li:nth-child(4n+4){
-    margin-right: 0px;
-    margin-bottom: 30px;
-  }
-  
-  .text {
-    display: inline-block;
-    text-align: center;
-    width: 1110px;
-    text-transform: uppercase;
-    font-family: "Roboto Black", sans-serif;
-    font-weight: bold;
-    color: #515151;
-    font-size: 34px;
-    margin-bottom: 32px;
-  }
-  
-  .text::after {
-    display: block;
-    content: "";
-    background-color: #1abc9c;
-    width: 164px;
-    height: 6px;
-    margin: 20px auto 0;
-  }
-  
-  h2 {
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  .news li {
-    display: inline-block;
-    width: 350px;
-    height: 262px;
-    list-style-type: none;
-    margin-right: 30px;
-    margin-top: 82px;
-  }
-  
-  .news li:nth-child(3n) {
-    margin-right: 0;
-  }
-  
-  .news li {
-    float: left;
-  }
-  
-  .clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .pictures li:hover .name {
-    background-color: #1abc9c;
-  }
-  .pictures li:hover .price {
-    background-color: #7fd9c7;
-  }
-  
-  h3 {
-    display: inline-block;
-    width: 350px;
-    margin-top: 15px;
-    margin-bottom: 30px;
-    font-weight: bold;
-    font-size: 16px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: bold 600;
-    color: #555252;
-    line-height: 26px;
-  }
-  
-  h3::after {
-    display: block;
-    content: "";
-    background-color: #1abc9c;
-    width: 136px;
-    height: 2px;
-    margin-top: 12px;
-  }
-  
-  p {
-    margin-bottom: 16px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color: #6c6969;
-    line-height: 26px;
-  }
-  
-  button {
-    display: block;
-    border: none;
-    width: 160px;
-    height: 50px;
-    font-size: 14px;
-    background-color: #1abc9c;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
-    color: white;
-    margin-bottom: 15px;
-  }
-  button a{
-    text-decoration: none;
-    font-weight: 500;
-    list-style: none;
-    color: white;
-  }
-  button a:hover{
-    color: red;
-  }
-  .news{
-    margin: 0px;
-  }
-  .pictures li{
-    margin: 0px;
-    padding: 0px;
-    margin-right: 30px;
-    float: left;
-  }
-  .pictures li:nth-child(n+5){
-    margin-bottom: 100px;
-  }
-  .navigation li{
-    margin-right: 30px;
-    float: left;
-  }
-  .navigation li:nth-child(n+6){
-    margin-right: 0px;
-  }
-  .text1 {
-    display: inline-block;
-    text-align: center;
-    width: 1110px;
-    text-transform: uppercase;
-    font-family: "Roboto Black", sans-serif;
-    font-weight: bold;
-    color: #515151;
-    font-size: 34px;
-    margin-bottom: 120px;
-  }
-  
-  .text1::after {
-    display: block;
-    content: "";
-    background-color: #1abc9c;
-    width: 164px;
-    height: 6px;
-    margin: 20px auto 0;
-  }
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+.container {
+  width: 1110px;
+  margin: 0 auto;
+}
+
+h1::first-letter {
+  color: #1abc9c;
+  font-family: "Roboto Black", sans-serif;
+  font-weight: bold;
+}
+
+h1 {
+  float: left;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #515151;
+  font-size: 22px;
+    }
+
+.navigation {
+  list-style: none;
+  float: right;
+  margin: 0;
+}
+
+}
+.clearfix{
+  text-align: center;
+}
+header{
+  padding-bottom: 100px;
+  padding-top: 32px;
+  text-align: center;
+  width: 1110px;
+    }
+.navigation a {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  color: black;
+  text-decoration: none;
+}
+
+.navigation a:hover {
+  color: #1abc9c;
+}
+
+.pictures li {
+  display: inline-block;
+  width: 255px;
+  height: 322px;
+  list-style-type: none;
+  margin-right: 0px;
+  margin-bottom: 30px;
+}
+
+.pictures li:nth-child(4n) {
+  margin-bottom: 0px;
+  margin-right: 30px;
+}
+
+.pictures li {
+  float: left;
+}
+
+.name {
+  display: inline-block;
+  width: 200px;
+  height: 40px;
+  background-color: #323232;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: black;
+  color: white;
+  text-decoration: none;
+  line-height: 40px;
+}
+
+.price {
+  display: inline-block;
+  background-color: #8c8c8c;
+  width: 55px;
+  height: 40px;
+  text-align: center;
+  float: right;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: black;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  line-height: 40px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.pictures li img {
+  display: inline-block;
+  height: 282px;
+  width: 255px;
+  margin-bottom: -4px;
+}
+
+.pictures li:nth-child(n +4) {
+  margin-bottom: 30px;
+}
+
+.pictures li:nth-child(4n+4){
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+.text {
+  display: inline-block;
+  text-align: center;
+  width: 1110px;
+  text-transform: uppercase;
+  font-family: "Roboto Black", sans-serif;
+  font-weight: bold;
+  color: #515151;
+  font-size: 34px;
+  margin-bottom: 32px;
+}
+
+.text::after {
+  display: block;
+  content: "";
+  background-color: #1abc9c;
+  width: 164px;
+  height: 6px;
+  margin: 20px auto 0;
+}
+
+h2 {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.news li {
+  display: inline-block;
+  width: 350px;
+  height: 262px;
+  list-style-type: none;
+  margin-right: 30px;
+  margin-top: 82px;
+}
+
+.news li:nth-child(3n) {
+  margin-right: 0;
+}
+
+.news li {
+  float: left;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.pictures li:hover .name {
+  background-color: #1abc9c;
+}
+.pictures li:hover .price {
+  background-color: #7fd9c7;
+}
+
+h3 {
+
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold 600;
+  color: #555252;
+  line-height: 26px;
+}
+
+h3::after {
+  display: block;
+  content: "";
+  background-color: #1abc9c;
+  width: 136px;
+  height: 2px;
+  margin-top: 12px;
+}
+
+p {
+  margin-bottom: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #6c6969;
+  line-height: 26px;
+}
+
+button {
+  display: block;
+  border: none;
+  width: 160px;
+  height: 50px;
+  font-size: 14px;
+  background-color: #1abc9c;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  color: white;
+  margin-bottom: 15px;
+}
+button a{
+  text-decoration: none;
+  font-weight: 500;
+  list-style: none;
+  color: white;
+}
+button a:hover{
+  color: red;
+}
+.news{
+  margin: 0px;
+}
+.pictures li{
+  margin: 0px;
+  padding: 0px;
+  margin-right: 30px;
+  float: left;
+}
+.pictures li:nth-child(n+5){
+  margin-bottom: 100px;
+}
+.navigation li{
+  margin-right: 30px;
+  float: left;
+}
+.navigation li:nth-child(n+6){
+  margin-right: 0px;
+}
+.text1 {
+  display: inline-block;
+  text-align: center;
+  width: 1110px;
+  text-transform: uppercase;
+  font-family: "Roboto Black", sans-serif;
+  font-weight: bold;
+  color: #515151;
+  font-size: 34px;
+  margin-bottom: 120px;
+}
+
+.text1::after {
+  display: block;
+  content: "";
+  background-color: #1abc9c;
+  width: 164px;
+  height: 6px;
+  margin: 20px auto 0;
+}
+.news a{
+  text-decoration: none;
+}
