--- a/hm5_final/css/style.css
+++ b/hm5_final/css/style.css
@@ -17,7 +17,7 @@ img {
 }
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
+{
   position: absolute;
   width: 1px;
   height: 1px;
@@ -64,6 +64,9 @@ body {
 }
 .navigation li {
   float: left;
+}
+.navigation .nav11{
+  text-decoration: none;
 }
 .navigation a {
   display: block;
@@ -126,27 +129,37 @@ width: 100%;
   line-height: 54px;
   color: #ffffff;
 }
-/* КНОПКИ !!!! */
+
 .btn{
   position: absolute;
   top: 0;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-}
+  font-size: 100px;
+  }
+  .slider_right{
+    text-align: right;
+  }
+
 .button{
   margin: 0;
   width: 105px;
   height: 105px;
-  background-color: rgba(78, 198, 171, .6);
-  border: none;
+  background-color: transparent;
+  border: 1px solid rgb(255, 255, 255);
+  font-weight: 100;
   cursor: pointer;
   background-repeat: no-repeat;
-  background-position: center;
+  top: 50%;
 }
-}
+
 .slider_right{
-  float: right;
+  float: center;
+}
+.btn p{
+  display: inline-block;
+  
 }
  
 .symbol{
@@ -210,6 +223,7 @@ width: 100%;
   padding: 0;
 }
 .card_item{
+  display: inline-block;
   float: left;
 }
 .card_img{
@@ -281,42 +295,147 @@ width: 100%;
 }
 
 /* Overline */
-.card{
-  list-style: none;
-}
-.card_img{
-    display: block;
-  width: 100%;
-  height: auto;
-}
-.card_item:hover .overlay{
-    background-color: rgba(0, 0, 0, 0.5);
-    visibility: visible;
-    opacity: 1;
-    position: absolute;
-}
-.overlay-backdrop{
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  height: 282px;
-  width: 256px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 14px solid rgba(255, 255, 255, 0.3);
-  background-clip: padding-box;
-}
 /* Botton Overlay */
-.overlay button{
+
+
+.card_item{
+  position: relative;
+  width: 255px;
+  box-shadow: 0 0 1px 1px rgba(255, 255, 255, rgb(255, 255, 255,));
+  opacity: 0,27;
+}
+  .overlay{
+    position: absolute;
+    width: 100%;
+    height: 322px;
+    top: 0;
+    left: 0; 
+    border: 10px solid rgba(255, 255, 255, 0.4);
+    background-clip: padding-box;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+.card_item:hover .overlay{
+ 
+  visibility: visible;
+  opacity: 1;
+
+}
+.overline_icon{
+
+  position: absolute;
+  height: 106px;
+  width: 170px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.overline_1234{
+  display: inline-block;
   border: 1px solid rgb(255, 255, 255);
   width: 50px;
   height: 50px;
   background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
+  margin-right: 10px;
+  margin-bottom: 8px;
 }
+
+.time {
+  margin-right: 0;
+  margin-bottom: 8px;
+}
+
+.overline_12345{
+  display: inline-block;
+  width: 170px;
+  height: 50px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
 .overlay img{
   margin: auto;
   display: inline-block;
   vertical-align: text-bottom;
+}
+.overlay button{
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+.card_item li{
+  margin-right: 30px;
+}
+.nav11{
+  list-style: none;
+}
+.card_item{
+  list-style: none;
+}
+.overline1234{
+  height: 50px;
+  width: 50px;
+}
+.overline_icon{
+  font-size: 0;
+}
+.overline_1234:hover{
+  background-color: #1abc9c;
+  border: none;
+}
+.overline_12345 {
+background-image: url(../img/hover/back.png);
+background-repeat: no-repeat;
+display: block;
+width: 170px;
+height: 50px;
+color: #ffffff;
 
+
+}
+.overline_12345{
+  display: block;
+  background-color: #323232;
+  background-image: url(../img/hover/back.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-position-x: 20px;
+  width: 170px;
+  height: 50px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-family: “Open+Sans”, regular;
+  font-size: 14px;
+  letter-spacing: -0.28px;
+  padding-left: 46px;
+}
+.overline_12345:hover{
+  background-color: #1abc9c;
+}
+.slider_right:hover{
+  background-color: #1abc9c;
+
+}
+.slider_left:hover{
+  background-color: #1abc9c;
+}
+.slider_right{
+  background-image: url(../img/right.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 105px;
+  height: 105px;
+  color: #ffffff;
+  font-size: 100px;
+}
+.slider_left{
+  background-image: url(../img/left.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 105px;
+  height: 105px;
+  color: #ffffff;
+  font-size: 100px;
 }
