--- a/hm5_final/css/style.css
+++ b/hm5_final/css/style.css
@@ -93,14 +93,16 @@ body {
   object-fit: cover;
   max-width: 100%;
   height: 600px;
+
 }
 .for_slider::before{
   position: absolute;
 width: 100%;
   height: 100%;
   content: "";
-  background: #000000;
-  opacity: 0.65;
+  background: rgb(0, 0, 2);
+  opacity: 0.52;
+
 }
 .conteiner_slaider{
   position: absolute;
@@ -138,16 +140,14 @@ width: 100%;
   transform: translate(-50%, -50%);
   font-size: 100px;
   }
-  .slider_right{
-    text-align: right;
-  }
 
 .button{
   margin: 0;
   width: 105px;
   height: 105px;
-  background-color: transparent;
-  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(78, 198, 171);
+  opacity: 0.651;
+  border: 1px solid transparent;
   font-weight: 100;
   cursor: pointer;
   background-repeat: no-repeat;
@@ -168,9 +168,6 @@ width: 100%;
   width:70px ;
 }
 
-.btn{
-  width: 1110px;
-}
 .slider_right{
   float: right;
 }
@@ -241,16 +238,20 @@ width: 100%;
   display: inline-block;
   width: 200px;
   height: 40px;
-  background-color: #323232;
-  text-align: center;
+  background-color: rgb(50, 50, 50);
+  padding-left: 9px;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
   color: white;
   text-decoration: none;
   line-height: 40px;
 }
+
 .price {
-  background-color: #8c8c8c;
+  background-color: rgb(50, 50, 50);
+  opacity: 0.65;
   width: 55px;
   height: 40px;
   text-align: center;
@@ -259,6 +260,7 @@ width: 100%;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   color: white;
+  font-size: 18px;
   text-decoration: none;
   line-height: 40px;
 }
@@ -266,7 +268,7 @@ width: 100%;
   background-color: #1abc9c;
 }
 .card_item:hover .price{
-  background-color: #7fd9c7;
+  background-color: #1abc9c;
 }
 /* FOOTER */
 
@@ -301,7 +303,7 @@ width: 100%;
 .card_item{
   position: relative;
   width: 255px;
-  box-shadow: 0 0 1px 1px rgba(255, 255, 255, rgb(255, 255, 255,));
+  box-shadow: 0 0 1px 1px rgba(255, 255, 255);
   opacity: 0,27;
 }
   .overlay{
@@ -318,10 +320,8 @@ width: 100%;
   }
 
 .card_item:hover .overlay{
- 
   visibility: visible;
-  opacity: 1;
-
+opacity: 1
 }
 .overline_icon{
 
@@ -385,16 +385,6 @@ width: 100%;
   background-color: #1abc9c;
   border: none;
 }
-.overline_12345 {
-background-image: url(../img/hover/back.png);
-background-repeat: no-repeat;
-display: block;
-width: 170px;
-height: 50px;
-color: #ffffff;
-
-
-}
 .overline_12345{
   display: block;
   background-color: #323232;
@@ -413,13 +403,16 @@ color: #ffffff;
 }
 .overline_12345:hover{
   background-color: #1abc9c;
+  opacity: 1;
 }
 .slider_right:hover{
   background-color: #1abc9c;
+  opacity: 1;
 
 }
 .slider_left:hover{
-  background-color: #1abc9c;
+  background-color: rgb(26, 188, 156);
+  opacity: 1;
 }
 .slider_right{
   background-image: url(../img/right.png);
@@ -427,8 +420,9 @@ color: #ffffff;
   background-position: center;
   width: 105px;
   height: 105px;
-  color: #ffffff;
   font-size: 100px;
+  color: #ffffff;
+
 }
 .slider_left{
   background-image: url(../img/left.png);
@@ -436,6 +430,10 @@ color: #ffffff;
   background-position: center;
   width: 105px;
   height: 105px;
-  color: #ffffff;
+  color: rgb(255, 255, 255);
   font-size: 100px;
+}
+header{
+  margin-top: 36px;
+  margin-bottom: 35px;
 }
