--- a/hm5_final/css/style.css
+++ b/hm5_final/css/style.css
@@ -303,16 +303,18 @@ width: 100%;
 .card_item{
   position: relative;
   width: 255px;
+  height: 322px;
   box-shadow: 0 0 1px 1px rgba(255, 255, 255);
   opacity: 0,27;
 }
   .overlay{
     position: absolute;
     width: 100%;
-    height: 322px;
+    height: 100%;
     top: 0;
     left: 0; 
     border: 10px solid rgba(255, 255, 255, 0.4);
+    margin-bottom: 40px;
     background-clip: padding-box;
     visibility: hidden;
     opacity: 0;
