--- a/hm6/style/style.css
+++ b/hm6/style/style.css
@@ -53,6 +53,7 @@ html {
   display: inline-block;
   vertical-align: middle;
   font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   color: #95e1d3;
   font-size: 14px;
   text-decoration: none;
@@ -121,7 +122,7 @@ html {
   margin-bottom: 14px;
   font-size: 14px;
   }
-  li .inform-product{
+  .card .inform-product {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   line-height: 24px;
@@ -152,18 +153,7 @@ html {
 .team{
   margin-top: 90px;
 }
-.text{
-  display: block;
-  width: 980px;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-  line-height: 24px;
-  color: #999999;
-  text-align: center;
-  margin-bottom: 88px;
-  margin-left: 110px;
 
-}
 .team2::after{
   content: " ";
   display: block;
@@ -246,25 +236,16 @@ html {
   }
   .network:hover {
     background-color: #95e1d3;
-    cursor: pointer;}
-
-  ::placeholder {
-    font-family: "Roboto", sans-serif;
-    font-size: 15px;
-    line-height: 24px;
-    font-weight: 300;
-    font-style: italic;
-    color: #ccc;
-    text-transform: capitalize;
-    padding-left: 10px;
+    cursor: pointer;
   }
-  /* Effects */
-.inform-product:first-child{
-  background-image: url(../img/png/imag1.png);
-  background-repeat: no-repeat;
-  background-position: 5% 0;
-  margin-bottom: 98px;
-}
+
+   /* Effects */
+.inform-product:nth-child(1){
+    background-image: url(../img/png/imag1.png);
+    background-repeat: no-repeat;
+    background-position: 5% 0;
+    margin-bottom: 98px;
+  }
 .design{
   background-image: url(../img/png/imag2.png);
   background-repeat: no-repeat;
@@ -281,27 +262,25 @@ html {
   background-image: url(../img/png/imag4.png);
 background-repeat: no-repeat;
 background-position: 5% 0 ;
-margin-bottom: 98px;
 
 }
 .internet{
 background-image: url(../img/png/imag5.png);
 background-repeat: no-repeat;
 background-position: 5% 0;
-margin-bottom: 98px;
+
 }
 .digital{
 background-image: url(../img/png/IMAGE6.png);
 background-repeat: no-repeat;
 background-position: 5% 0;
-margin-bottom: 98px;
+
 }
 .team_foto{
   display: block;
   max-width: 100%;
   height: auto;
   margin-bottom: 30px;
-  transition-property: transform;
   transition-duration: 200ms;
   transition-timing-function: linear;
 }
@@ -351,17 +330,31 @@ margin-bottom: 98px;
 .network_social:hover {
   background-color: #95e1d3;
 }
-
-
-}
-.fecebook{
+.network_social:nth-child(1){
   background-image: url(../img/png/facebook.png);
 }
+.network_social:nth-child(2){
+  background-image: url(../img/png/twitter.png);
+}
+.network_social:nth-child(3){
+  background-image: url(../img/png/pinterest.png);
+}
+.network_social:nth-child(4){
+  background-image: url(../img/png/instagram.png);
+}
+.team-list{
+  margin-bottom: 86px;
+}
+.text-team{
+  display: block;
 
-
-
-
-
-
-  
+  width: 980px;
+  font-family: "Roboto";
+  font-size: 15px;
+  line-height: 24px;
+  color: rgb(153, 153, 153);
+  text-align: center;
+  font-weight: 400;
+  margin-bottom: 88px;
+  margin-left: 180px;
 }
