--- a/hm5_final/css/style.css
+++ b/hm5_final/css/style.css
@@ -95,7 +95,7 @@ body {
   height: 600px;
 
 }
-.for_slider::before{
+.slider-info::before{
   position: absolute;
 width: 100%;
   height: 100%;
@@ -322,9 +322,7 @@ span{
 opacity: 1
 }
 .overline_icon{
-
   position: absolute;
-  height: 106px;
   width: 170px;
   top: 50%;
   left: 50%;
@@ -432,14 +430,12 @@ opacity: 1
   font-size: 100px;
 }
 header{
-  margin-top: 36px;
-  margin-bottom: 35px;
+  padding-top: 36px;
+  pad: 35px;
 }
 .card li{
   width: 255px;
 }
 .card-info{
-  width: 255;
-  height: 40px;
   background-color: rgb(50, 50, 50);
 }
