--- a/hm6/style/style.css
+++ b/hm6/style/style.css
@@ -1,55 +1,57 @@
 html {
-    box-sizing: border-box;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .clearfix::after {
-    display: table;
-    content: "";
-    clear: both;
-  }
-  
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-  }
+  box-sizing: border-box;
+}
 
-  /* Header */
-  .logo{
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.clearfix::after {
+  display: table;
+  content: "";
+  clear: both;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+/* Header */
+.logo {
   font-family: "Monserrat", sans-serif;
   font-size: 30px;
   font-weight: bold;
   text-decoration: none;
   color: #95e1d3;
-  }
-  
-  .nav{
+}
+
+.nav {
   list-style: none;
   width: 490px;
   display: flex;
   justify-content: space-between;
   align-content: center;
-  }
-  nav{
+}
+
+nav {
   display: flex;
-  }
-  .nav li a{
+}
+
+.nav li a {
   display: inline-block;
   vertical-align: middle;
   font-family: "Montserrat", sans-serif;
@@ -58,28 +60,30 @@ html {
   font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
-  }
-  .nav a:hover{
+}
+
+.nav a:hover {
   content: "";
   color: #f38181;
   padding-bottom: 2px;
   border-bottom: 3px solid #f38181;
-  }
-  
-  .nav li{
-  transition: 0,2s linear;
-  }
-  .nava{
+}
+
+.nav li {
+  transition: 0, 2s linear;
+}
+
+.nava {
   display: flex;
   justify-content: space-between;
   padding-top: 28px;
   margin-bottom: 100px;
 }
 
-  
-  
+
+
 .title3,
-.team3{
+.team3 {
   display: block;
   font-family: "Kaushan Script", cursive;
   text-transform: lowercase;
@@ -89,15 +93,18 @@ html {
   text-align: center;
   margin-bottom: 7px;
   margin-bottom: 20px;
-  }
-.title3:first-letter{
-  text-transform: uppercase;
-  }
-.team3:first-letter{
+}
+
+.title3:first-letter {
   text-transform: uppercase;
 }
+
+.team3:first-letter {
+  text-transform: uppercase;
+}
+
 .title2,
-.team2{
+.team2 {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   text-align: center;
@@ -105,8 +112,9 @@ html {
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 63px;
-  }
-.title2::after{
+}
+
+.title2::after {
   content: " ";
   display: block;
   height: 4px;
@@ -114,44 +122,49 @@ html {
   margin: 0 auto;
   margin-top: 41px;
   background-color: #f38181;
-  }
-  .name-inform-product{
+}
+
+.name-inform-product {
   font-family: "Montserrat", sans-serif;
   color: rgb(51, 51, 51);
   text-transform: uppercase;
   margin-bottom: 14px;
   font-size: 14px;
-  }
-  .card .inform-product {
+}
+
+.card .inform-product {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   line-height: 24px;
   color: rgb(153, 153, 153);
-  }
-  
+}
+
 .inform-product li:nth-child(-n + 3) {
-    margin-bottom: 94px;
-  }
-.inform-product{
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-.card{
-      width: 354px;
-      padding-left: 82px;
-      background-repeat: no-repeat;
-      background-position-x: 22px;
-      text-decoration: none;
-      margin-bottom: 
-      }
-   /* team */
+  margin-bottom: 94px;
+}
+
+.inform-product {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  width: 354px;
+  padding-left: 82px;
+  background-repeat: no-repeat;
+  background-position-x: 22px;
+  text-decoration: none;
+  margin-bottom:
+}
+
+/* team */
 
 
-  
 
-.team2::after{
+
+.team2::after {
   content: " ";
   display: block;
   height: 4px;
@@ -160,12 +173,14 @@ html {
   margin-top: 41px;
   background-color: #f38181;
 }
-.team-list{
+
+.team-list {
   list-style: none;
   display: flex;
   justify-content: space-between;
 }
-.name{
+
+.name {
   display: block;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
@@ -174,7 +189,8 @@ html {
   margin-top: 29px;
   text-align: center;
 }
-.position{
+
+.position {
   display: block;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
@@ -185,89 +201,98 @@ html {
   text-transform: capitalize;
   text-align: center;
 }
+
 /* footer */
 
 .foot {
-    border-top: 1px solid #e5e5e5;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .copyright {
-    font-family: "Monserrat", sans-serif;
-    font-size: 14px;
-    color: #333333;
-  }
-  
-  .developer {
-    font-family: "Monserrat", sans-serif;
-    font-size: 14px;
-    color: #f38181;
-    cursor: pointer;
-  }
-  
-  .email-input {
-    height: 40px;
-    width: 230px;
-    border: 1px solid #e7e7e7;
-    border-right: none;
-  }
-  
-  .subscribe-btn {
-    font-family: "Monserrat", sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    height: 40px;
-    width: 150px;
-    color: #fff;
-    background-color: #95e1d3;
-    border: none;
-    text-transform: uppercase;
-    cursor: pointer;
-  }
-  
-  .email-form {
-    display: flex;
-    margin: 11px 0px;
-  }
-  .network:hover {
-    background-color: #95e1d3;
-    cursor: pointer;
-  }
-
-   /* Effects */
-   .icon{
-     display: block;
-     height: 32px;
-    background-repeat: no-repeat;
-    background-position: 5% 0;
-    margin-bottom: 98px;
-   }
-.photography{
-    background-image: url(../img/png/imag1.png);
-    
-  }
-.design{
-  background-image: url(../img/png/imag2.png);
-  
+  border-top: 1px solid #e5e5e5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.creativity{
+
+.copyright {
+  font-family: "Monserrat", sans-serif;
+  font-size: 14px;
+  color: #333333;
+}
+
+.developer {
+  font-family: "Monserrat", sans-serif;
+  font-size: 14px;
+  color: #f38181;
+  cursor: pointer;
+}
+
+.email-input {
+  height: 40px;
+  width: 230px;
+  border: 1px solid #e7e7e7;
+  border-right: none;
+}
+
+.subscribe-btn {
+  font-family: "Monserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  height: 40px;
+  width: 150px;
+  color: #fff;
+  background-color: #95e1d3;
+  border: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.email-form {
+  display: flex;
+  margin: 11px 0px;
+}
+
+.network:hover {
+  background-color: #95e1d3;
+  cursor: pointer;
+}
+
+/* Effects */
+.icon {
+  display: block;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-position: 5% 0;
+  margin-bottom: 98px;
+}
+
+.photography {
+  background-image: url(../img/png/imag1.png);
+
+}
+
+.design {
+  background-image: url(../img/png/imag2.png);
+
+}
+
+.creativity {
   background-image: url(../img/png/imag3.png);
- }
-.seo{
+}
+
+.seo {
   background-image: url(../img/png/imag4.png);
 
 }
-.internet{
-background-image: url(../img/png/imag5.png);
+
+.internet {
+  background-image: url(../img/png/imag5.png);
 
 }
-.digital{
-background-image: url(../img/png/IMAGE6.png);
+
+.digital {
+  background-image: url(../img/png/IMAGE6.png);
 
 }
-.team_foto{
+
+.team_foto {
   display: block;
   max-width: 100%;
   height: auto;
@@ -282,32 +307,42 @@ background-image: url(../img/png/IMAGE6.png);
   right: 0;
   bottom: 0;
   left: 0;
-  background: linear-gradient(
-    rgba(243, 129, 129, 0.9),
-    rgba(252, 227, 138, 0.9));
+  background: linear-gradient(rgba(243, 129, 129, 0.9),
+      rgba(252, 227, 138, 0.9));
   opacity: 0;
+  visibility: hidden;
   transition-duration: 200ms;
   transition-timing-function: linear;
 }
+
 .overlay-wrapper {
   position: relative;
 }
 
-.team-item:hover .overlay {
+.team-item:hover .overlay-wrapper {
   opacity: 1;
+  visibility: visible;
   transform: translate(-12px, -12px);
   box-shadow: 12px 12px 0 #95e1d3;
   cursor: pointer;
 }
+.team-item:hover .overlay{
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0px, 0px);
+  box-shadow: 0px 0px 0 #95e1d3;
+  cursor: pointer;
+}
 
-.social-network{
+.social-network {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
 }
-.network_social{
+
+.network_social {
   border: none;
   width: 56px;
   height: 56px;
@@ -317,26 +352,34 @@ background-image: url(../img/png/IMAGE6.png);
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  list-style: none;
 }
+
 .network_social:hover {
   background-color: #95e1d3;
 }
-.network_social:nth-child(1){
+
+.network_social:nth-child(1) {
   background-image: url(../img/png/facebook.png);
 }
-.network_social:nth-child(2){
+
+.network_social:nth-child(2) {
   background-image: url(../img/png/twitter.png);
 }
-.network_social:nth-child(3){
+
+.network_social:nth-child(3) {
   background-image: url(../img/png/pinterest.png);
 }
-.network_social:nth-child(4){
+
+.network_social:nth-child(4) {
   background-image: url(../img/png/instagram.png);
 }
-.team-list{
+
+.team-list {
   margin-bottom: 86px;
 }
-.text-team{
+
+.text-team {
   display: block;
 
   width: 980px;
