--- a/hm7/style/style.css
+++ b/hm7/style/style.css
@@ -34,6 +34,16 @@
        url('../style/noto-serif-v8-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('../style/noto-serif-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+/* loved-by-the-king-regular - latin */
+@font-face {
+  font-family: 'Loved by the King';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Loved by the King'), local('LovedbytheKing'),
+       url('../style/loved-by-the-king-v9-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('../style/loved-by-the-king-v9-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 *,
 *::before,
 *::after {
@@ -49,9 +59,10 @@
 }
   /* Header */
   .logo{
-  font-family: "LovedbytheKing", sans-serif;
+  font-family: "Loved by the King", sans-serif;
   font-size: 26px;
   color: gold;
+  text-decoration: none;
   }
 
   
@@ -103,7 +114,6 @@
 }
 .title-text{
   display: block;
-  text-align: center;
   font-family: 'Noto Serif';
   font-style: italic;
   font-weight: 400;
@@ -115,11 +125,10 @@
 /* body */
 .servic_product{
   display: flex;
-  align-items: center;
-  justify-content: space-between;  
+  justify-content: space-between; 
 }
 .card{
-  width: 300px;
+  width: 290px;
   text-align: center;
   position: relative;
   padding-top: 90px;
@@ -132,7 +141,9 @@
     margin-bottom: 18px;
   }
   .inform-product{
-      font-size: 14px;
+
+    
+    font-size: 14px;
       font-family: "RobotoSlab";
       color: rgb(119, 119, 119);
       line-height: 1.2;
@@ -143,7 +154,7 @@
   display:block;
   width: 70px;
   height: 70px;
-  border: 3px solid yellow;
+  border: 3px solid orange;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center;
@@ -160,4 +171,112 @@
 }
 .lock::before{
   background-image: url(../img/locked.png);
+}
+
+/* forms */
+.inform11{
+  margin-top: 120px;
+}
+.contact-us{
+  padding-bottom: 70px;
+  background-image: url(../img/map.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+
+}
+.title-contact{
+  margin-bottom: 15px;
+    font-size: 40px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+}
+.text-contact{
+  display: block;
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: rgb(119, 119, 119);
+  font-style: italic;
+  line-height: 1.2;
+  text-align: center;
+}
+.contact-us{
+  display: block;
+}
+.form-contact{
+  display: flex;
+  
+}
+.container-contact-us{
+  margin: 0 auto;
+}
+.input{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+input {
+  width: 450px;
+  height: 52px;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 20px;
+}
+form{
+  padding-bottom: 30px;
+}
+input:required:focus:valid{
+  border-color : #008000;
+}
+input:required:focus:invalid{
+  border-color: #ff0000;
+}
+.textarea{
+  width: 455px;
+}
+textarea{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #cccccc;
+  border-radius: 2px;
+  resize: none;
+  padding: 2px 2px;
+  outline: none;
+}
+.forms1{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+button{
+    display: block;
+    width: 240px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #ffffff;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 3px;
+    background-color: orange;
+    border: 1px solid orange;
+    cursor: pointer;
+    padding: 20px 2px;
+    margin: 0 auto; 
+}
+.servic_product{
+  margin-bottom: 120px;
+}
+.title-contact{
+  padding-top: 100px;
+  margin-bottom: 18px;
+}
+input:not(:last-child){
+  margin-bottom: 30px;
 }
