--- a/hm8_2/style/style.css
+++ b/hm8_2/style/style.css
@@ -47,8 +47,6 @@ html {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 ul {
@@ -154,28 +152,33 @@ a.login-button:focus{
 }
 
 .action-button {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  background-color: #ff4e50;
-  border: 1px #ff4e50 solid;
-  border-radius: 40px 40px 40px 40px;
-  text-align: center;
-  color: #ffffff;
-  text-decoration: none;
-  line-height: 40px;
-  display: block;
-  width: 280px;
-  height: 40px;
-  margin: 0 auto;
-}
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    line-height: 1.2;
+    text-align: center;
+    background-color: #ff4e50;
+    border: 1px #ff4e50 solid;
+    border-radius: 40px 40px 40px 40px;
+    text-decoration: none;
+    line-height: 40px;
+    display: block;
+    width: 280px;
+    height: 40px;
+    margin: 0 auto;
+  }
+
 /* SECTON PARTNERS */
 .partners {
   text-align: center;
   padding-top: 70px;
   padding-bottom: 55px;
 }
-
+.partner-list__img{
+  width: 121px;
+  height: 121px;
+}
 .partners-title {
   
    font-family: "Montserrat";
@@ -200,19 +203,22 @@ a.login-button:focus{
   cursor: pointer;
   border-radius: 50%;
 }
+.partners-list-item {
 
+}
 .partner-list__img-wrapper:after{
   display: block;
   content: "";
   background-repeat: no-repeat;
-  border: 5px solid #ffffff;
+  border: 4px solid #ffffff;
   width: 40px;
   height: 40px;
   position: absolute;                 
   border-radius: 50%;
   background-position: center;
-  bottom: -7px;
-  right: -7px; 
+  bottom: 7px;
+  left: 100px; 
+  box-sizing: border-box;
 }
 
 .item-one::after {
@@ -246,22 +252,23 @@ a.login-button:focus{
 
 .description {
   font-family: "Roboto";
-  font-size: 12px;
+  font-size: 14px;
   color: #4d4c4c;
-  width: 225px;
+  width: 220px;
   margin: 0 auto;
+  
 }
 
 .action-btn {
 
-  font-family: "Montserrat", sans-serif;
   font-size: 14px;
-  font-weight: 700;
-  background-color: #ffffff;
+  font-family: "Montserrat";
+  color: rgb(255, 78, 80);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
   border: 2px #ff4e50 solid;
   border-radius: 40px 40px 40px 40px;
-  text-align: center;
-  color: #ff4e50;
   text-decoration: none;
   display: block;
   width: 284px;
@@ -273,7 +280,7 @@ a.login-button:focus{
 .action-btn:hover{
   
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   .container {
       width: 768px;
   }
@@ -323,16 +330,18 @@ a.login-button:focus{
 
   .partners-list {
       list-style: none;
-      margin: 0;
-      padding: 20px;
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
+      width: 460px;
+      margin: 0 auto;
+      margin-bottom: 20px;
   }
 
   .partners-list-item {
-      min-width: 266px;
+      min-width: 220px;
       cursor: pointer;
+      
 
   }
 
@@ -358,7 +367,7 @@ a.login-button:focus{
   
 }
 
-@media screen and (min-width: 940px) {
+@media (min-width: 940px) {
 
   
   .container {
@@ -376,6 +385,7 @@ a.login-button:focus{
   }
 
   .partners-list-item {
-      min-width: 200px;
+      min-width: 220px;
   }
 
+}
